# ExcelAlchemy

./: .gitignore  .pre-commit-config.yaml  ABOUT.md  AGENTS.md  CHANGELOG.md  MIGRATIONS.md  README-pypi.md  README.md  README_cn.md  SECURITY.md  codecov.yml  noxfile.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  python-publish.yml
adr/: 0001-facade-outside-focused-collaborators-inside.md  0002-metadata-owns-excel-semantics-separate-from-pydantic-internals.md  0003-keep-2x-compatibility-shims-as-migration-layer-scheduled-for-3x-removal.md  README.md
context/architecture/: module_index.json  repo_map.json
context/instructions/: AGENTS.md  invariants.json
context/patterns/: validation.json
docs/: api-response-cookbook.md  architecture.md  documentation-maintenance-checklist.md  domain-model.md  examples-showcase.md  getting-started.md  integration-blueprints.md  integration-roadmap.md  invariants.md  limitations.md  locale.md  performance.md  platform-architecture.md  platform-code-mapping.md  public-api.md  repo-map.md  result-objects.md  runtime-model.md  tool-comparison.md
docs/agent/: architecture-boundaries.md  invariants.md  review.md  testing.md  workflow.md
docs/history/: README.md
docs/history/adr/: 0001-facade-outside-focused-collaborators-inside.md  0002-metadata-owns-excel-semantics-separate-from-pydantic-internals.md  0003-keep-2x-compatibility-shims-as-migration-layer-scheduled-for-3x-removal.md  README.md
docs/history/plans/: README.md  v2-3-front-end-remediation-payload-v1-design.md  v2-3-front-end-remediation-payload-v1.md  v2-3-import-preflight-v1-lightweight-structural-validation-design.md  v2-3-job-friendly-import-v1-structured-lifecycle-events-design.md  v2-3-template-ux-metadata-v1-design.md  v2-3-template-ux-metadata-v1.md  v2-4-0-release-check.md  v2-4-import-platform-layer-design-note.md  v2-4-import-platform-layer-design.md  v2-4-minimal-platform-alignment-self-review.md
docs/releases/: 2.0.0.md  2.0.0rc1.md  2.1.0.md  2.2.0.md  2.2.1.md  2.2.2.md  2.2.3.md  2.2.5.md  2.2.6.md  2.2.7.md  2.2.8.md  2.4.0.md
docs/tech-debt/: README.md  example-docs-and-generated-asset-synchronization-overhead.md  v2-4-platform-doc-naming-drift.md
eval/: README.md  __init__.py  local.py
examples/: README.md  __init__.py  annotated_schema.py  create_or_update_import.py  custom_storage.py  date_and_range_fields.py  employee_import_workflow.py  export_workflow.py  fastapi_upload.py  minio_storage.py  selection_fields.py
examples/fastapi_reference/: README.md  __init__.py  app.py  models.py  presenters.py  responses.py  schemas.py  services.py  storage.py
excelalchemy/: const.py
excelalchemy/core/: abstract.py  alchemy.py  writer.py
excelalchemy/helper/: pydantic.py
excelalchemy/types/: abstract.py  alchemy.py  field.py
excelalchemy/types/value/: date.py  multi_checkbox.py  number.py  number_range.py  radio.py  string.py  tree.py
excelalchemy/util/: file.py
files/: portfolio-import-input-en.xlsx  portfolio-import-result-en.xlsx  portfolio-template-en.xlsx
files/example-outputs/: annotated-schema.txt  create-or-update-import.txt  custom-storage.txt  date-and-range-fields.txt  employee-import-workflow.txt  export-workflow.txt  fastapi-reference.txt  import-failure-api-payload.json  selection-fields.txt
harness/: context.py  loop.py  plan_artifact.py  runner.py  state.py
plans/: README.md  template.md  v2-3-import-preflight-v1-lightweight-structural-validation-design.md  v2-3-job-friendly-import-v1-structured-lifecycle-events-design.md  v2-3-template-ux-metadata-v1-design.md  v2-3-template-ux-metadata-v1.md  v2-4-import-platform-layer-design-note.md  v2-4-import-platform-layer-design.md  v2-4-minimal-platform-alignment-self-review.md  v2-4-minimal-platform-alignment.md  v2-4-readiness-report.md  v2-4-release-plan.md
runs/: README.md
scripts/: generate_example_output_assets.py  generate_portfolio_assets.py  smoke_api_payload_snapshot.py  smoke_docs_assets.py  smoke_examples.py  smoke_package.py
src/excelalchemy/: README.md  __init__.py  artifacts.py  config.py  const.py  exc.py  exceptions.py  header_models.py  identity.py  metadata.py  results.py
src/excelalchemy/_internal/: __init__.py  constants.py  deprecation.py  header_models.py
src/excelalchemy/_primitives/: __init__.py  constants.py  diagnostics.py  header_models.py  identity.py  payloads.py
src/excelalchemy/codecs/: __init__.py  base.py  boolean.py  date.py  date_range.py  email.py  money.py  multi_checkbox.py  number.py  number_range.py  organization.py  phone_number.py  radio.py  staff.py  string.py  tree.py  url.py
src/excelalchemy/core/: abstract.py  alchemy.py  executor.py  headers.py  import_session.py  preflight.py  rendering.py  rows.py  schema.py  storage.py  storage_minio.py  storage_protocol.py  table.py  writer.py
src/excelalchemy/helper/: pydantic.py
src/excelalchemy/i18n/: __init__.py  messages.py
src/excelalchemy/types/: __init__.py  abstract.py  alchemy.py  field.py  header.py  identity.py  result.py
src/excelalchemy/util/: converter.py  convertor.py  file.py
tech_debt/: README.md  compatibility-surface-sprawl-in-2x.md  v2-4-platform-doc-naming-drift.md
tests/: README.md  __init__.py
tests/contracts/: test_core_components_contract.py  test_export_contract.py  test_import_contract.py  test_pydantic_contract.py  test_result_contract.py  test_storage_contract.py  test_template_contract.py
tests/integration/: test_examples_smoke.py  test_excelalchemy_workflows.py
tests/support/: __init__.py  base.py  contract_models.py  mock_minio.py  registry.py  storage.py  workbook.py
tests/unit/: test_config_options.py  test_converters_and_schema_extraction.py  test_deprecation_policy.py  test_diagnostics_logging.py  test_excel_exceptions.py  test_field_metadata.py  test_file_utils.py  test_i18n_messages.py
tests/unit/codecs/: test_boolean_codec.py  test_codec_logging.py  (+11 more)
tools/: README.md  repo_tools.py
(+31 files in other folders)
