[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'ExcelAlchemy'
description = 'A Python library for reading and writing Excel files with Pydantic-based schemas.'
authors = [{ name = 'Ray', email = 'hrui835@gmail.com' }]
readme = 'README.md'
license = { file = 'LICENSE' }
keywords = ['excel', 'openpyxl', 'pandas', 'pydantic', 'minio']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Office/Business :: Financial :: Spreadsheet',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
dynamic = ['version']
requires-python = '>=3.10'
dependencies = [
    'pandas >=2.0.0, <3',
    'minio >=7.0.0, <8',
    'pydantic[email] >=1.9, <2',
    'openpyxl >=3.0.10, <4',
    'pendulum >=2.1.2, <4',
]

[tool.flit.module]
name = 'excelalchemy'

[project.urls]
Home = 'https://github.com/RayCarterLab/ExcelAlchemy'
Repository = 'https://github.com/RayCarterLab/ExcelAlchemy'
Documentation = 'https://github.com/RayCarterLab/ExcelAlchemy#readme'
Issues = 'https://github.com/RayCarterLab/ExcelAlchemy/issues'

[project.optional-dependencies]
development = [
    'build',
    'pandas-stubs',
    'nox',
    'pre-commit',
    'pyright==1.1.299',
    'pytest',
    'coverage',
    'pytest-cov',
    'ruff',
]

[tool.pyright]
include = ['src/excelalchemy', 'tests']
exclude = [
    '.venv',
    'venv',
    '.git',
    '**/.mypy_cache',
    '**/__pycache__',
    '**/.pytest_cache',
    'src/excelalchemy/types/field.py',
]
ignore = ['pandas']
enableTypeIgnoreComments = false
reportAbstractUsage = false
reportArgumentType = false
reportAssignmentType = false
reportAttributeAccessIssue = false
reportCallIssue = false
reportDeprecated = false
reportGeneralTypeIssues = false
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportPrivateImportUsage = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnusedFunction = false
reportUnusedImport = false
typeCheckingMode = 'basic'

[tool.ruff]
line-length = 120
target-version = 'py310'
src = ['src', 'tests']
extend-exclude = ['files']

[tool.ruff.lint]
select = ['E', 'F', 'I']
ignore = ['E501']

[tool.ruff.lint.per-file-ignores]
'**/__init__.py' = ['F401']

[tool.ruff.format]
quote-style = 'preserve'
indent-style = 'space'
line-ending = 'auto'

[tool.pytest.ini_options]
addopts = ['--import-mode=importlib']
testpaths = ['tests']

[tool.coverage.run]
branch = true
source = ['excelalchemy']

[tool.coverage.report]
fail_under = 85
skip_covered = true
show_missing = true
