[build-system]
requires = ['flit_core >=3.12,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'ExcelAlchemy'
description = 'A Python library for reading and writing Excel files with Pydantic-based schemas.'
authors = [{ name = 'Ray', email = 'hrui835@gmail.com' }]
readme = 'README.md'
license = { file = 'LICENSE' }
keywords = ['excel', 'openpyxl', 'pydantic', 'minio', 'schema']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Office/Business :: Financial :: Spreadsheet',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
dynamic = ['version']
requires-python = '>=3.12'
dependencies = [
    'pydantic[email] >=2.12, <3',
    'openpyxl >=3.1.5, <4',
    'pendulum >=3.2.0, <4',
]

[tool.flit.module]
name = 'excelalchemy'

[project.urls]
Home = 'https://github.com/RayCarterLab/ExcelAlchemy'
Repository = 'https://github.com/RayCarterLab/ExcelAlchemy'
Documentation = 'https://github.com/RayCarterLab/ExcelAlchemy#readme'
Issues = 'https://github.com/RayCarterLab/ExcelAlchemy/issues'

[project.optional-dependencies]
minio = [
    'minio >=7.2.20, <8',
]
development = [
    'minio >=7.2.20, <8',
    'pre-commit',
    'pyright==1.1.408',
    'pytest',
    'coverage',
    'pytest-cov',
    'ruff',
]

[tool.pyright]
include = ['src/excelalchemy', 'tests']
exclude = [
    '.venv',
    'venv',
    '.git',
    '**/.mypy_cache',
    '**/__pycache__',
    '**/.pytest_cache',
    'src/excelalchemy/types/field.py',
]
enableTypeIgnoreComments = false
reportAbstractUsage = false
reportAttributeAccessIssue = false
reportCallIssue = false
reportPrivateImportUsage = false
reportRedeclaration = false
strict = [
    'src/excelalchemy/_primitives/constants.py',
    'src/excelalchemy/_primitives/deprecation.py',
    'src/excelalchemy/_primitives/header_models.py',
    'src/excelalchemy/_primitives/identity.py',
    'src/excelalchemy/_primitives/payloads.py',
    'src/excelalchemy/artifacts.py',
    'src/excelalchemy/codecs/base.py',
    'src/excelalchemy/codecs/boolean.py',
    'src/excelalchemy/codecs/date.py',
    'src/excelalchemy/codecs/date_range.py',
    'src/excelalchemy/codecs/email.py',
    'src/excelalchemy/codecs/money.py',
    'src/excelalchemy/codecs/multi_checkbox.py',
    'src/excelalchemy/codecs/number.py',
    'src/excelalchemy/codecs/number_range.py',
    'src/excelalchemy/codecs/organization.py',
    'src/excelalchemy/codecs/phone_number.py',
    'src/excelalchemy/codecs/radio.py',
    'src/excelalchemy/codecs/staff.py',
    'src/excelalchemy/codecs/string.py',
    'src/excelalchemy/codecs/tree.py',
    'src/excelalchemy/codecs/url.py',
    'src/excelalchemy/config.py',
    'src/excelalchemy/core/alchemy.py',
    'src/excelalchemy/core/abstract.py',
    'src/excelalchemy/core/executor.py',
    'src/excelalchemy/core/rendering.py',
    'src/excelalchemy/core/schema.py',
    'src/excelalchemy/core/storage.py',
    'src/excelalchemy/core/storage_minio.py',
    'src/excelalchemy/core/storage_protocol.py',
    'src/excelalchemy/core/table.py',
    'src/excelalchemy/core/writer.py',
    'src/excelalchemy/exceptions.py',
    'src/excelalchemy/core/headers.py',
    'src/excelalchemy/core/rows.py',
    'src/excelalchemy/helper/pydantic.py',
    'src/excelalchemy/i18n/messages.py',
    'src/excelalchemy/metadata.py',
    'src/excelalchemy/results.py',
    'src/excelalchemy/util/convertor.py',
    'src/excelalchemy/util/file.py',
]
typeCheckingMode = 'basic'

[tool.ruff]
line-length = 120
target-version = 'py312'
src = ['src', 'tests']
extend-exclude = ['files']

[tool.ruff.lint]
select = ['E', 'F', 'I', 'UP', 'B', 'SIM', 'C4', 'RUF', 'PERF']
ignore = ['E501', 'RUF001', 'RUF002', 'RUF003']

[tool.ruff.lint.per-file-ignores]
'**/__init__.py' = ['F401']
'src/excelalchemy/const.py' = ['RUF100']
'src/excelalchemy/exc.py' = ['E402', 'RUF100']
'src/excelalchemy/header_models.py' = ['E402', 'RUF100']
'src/excelalchemy/identity.py' = ['E402', 'RUF100']
'src/excelalchemy/types/*.py' = ['E402', 'RUF100']
'src/excelalchemy/types/**/*.py' = ['E402', 'RUF100']

[tool.ruff.format]
quote-style = 'preserve'
indent-style = 'space'
line-ending = 'auto'

[tool.pytest.ini_options]
addopts = ['--import-mode=importlib']
testpaths = ['tests']

[tool.coverage.run]
branch = true
source = ['excelalchemy']

[tool.coverage.report]
fail_under = 85
skip_covered = true
show_missing = true
